--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -65,6 +65,12 @@ main {
 
 html {
     overflow-x: hidden;
+    background: linear-gradient(60deg, #050505, #1e0e81, #050505);
+}
+/*  */
+
+section{
+    margin: 0px 0px 20px 0px;
 }
 
 /* Inicio */
@@ -81,7 +87,7 @@ html {
 .inicio div {
     font-size: 1.5rem;
     width: 40%;
-    height: 40vh;
+    /* height: 40vh; */
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -112,7 +118,7 @@ html {
 .inicio img {
     width: 300px;
     height: 300px;
-    border: 2px solid black;
+    border: 2px solid peru;
     border-radius: 50%;
     box-shadow: 0px 0px 12px black;
 }
@@ -141,12 +147,15 @@ html {
         border-radius: 12px;
         border: 2px solid peru;
     }
+    p{
+        text-align: justify;
+    }
 }
 
 /* fim sobre mim */
 
 #minhas-habilidades {
-    height: 155vh;
+    /* height: 155vh; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -205,7 +214,7 @@ html {
 
 /* */
 #projetos {
-    height: 60vh;
+    /* height: 60vh; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -272,7 +281,7 @@ html {
     align-items: center;
     justify-content: center;
     gap: 40px;
-    height: 40vh;
+    /* height: 40vh; */
 }
 
 .conteiner-contato {
@@ -338,7 +347,7 @@ footer {
     /* inicio media projetos */
 
     #projetos {
-        height: 120vh;
+        /* height: 120vh; */
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -355,7 +364,7 @@ footer {
     }
 
     .conteiner-projeto {
-        border: 2px solid black;
+        border: 2px solid peru;
         box-shadow: 0px 0px 12px black;
         width: 60%;
         padding: 10px 10px;
@@ -402,7 +411,7 @@ footer {
     header {
         background: linear-gradient(60deg, #050505, #230bbf);
         box-shadow: 0px 0px 12px black;
-        height: 10vh;
+        /* height: 10vh; */
         width: 100%;
         display: flex;
         justify-content: center;
@@ -467,7 +476,7 @@ footer {
     /*  */
 
     #minhas-habilidades {
-        height: 120vh;
+        /* height: 120vh; */
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -487,7 +496,6 @@ footer {
             display: flex;
             flex-direction: column;
             text-align: center;
-            border: 3px solid black;
             border-radius: 12px;
             /* gap: 10px; */
 
