--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -224,9 +224,11 @@ section{
 
 .lista-de-projetos {
     width: 100%;
-    /* height: 100%; */
+    max-width: 90%;
+    gap: 20px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .conteiner-projeto {
